# cosplay-photography-toolkit

./: .gitattributes  .gitignore  README.md  pyproject.toml
cli/: api_client.py  config.py  exporter.py  image_processing.py  main.py  metadata.py  nextcloud.py  object_storage.py
cli/commands/: configure.py  export.py  gallery.py  reregister.py  upload.py
web/api/: authentication.py  serializers.py  urls.py  views.py
web/config/: middleware.py  settings.py  urls.py
web/gallery/: admin.py  apps.py  models.py  nextcloud.py  object_storage.py  tasks.py  urls.py  views.py
web/gallery/migrations/: 0001_initial.py  0002_rename_r2_key_photo_s3_key.py  0003_rename_s3_key_photo_object_key.py  0004_add_is_active_fix_selection_related_name.py  0005_selection_multi_flag.py  0006_alter_comment_body.py  0007_alter_selection_unique_together_and_more.py  0008_photo_object_key_photo_preview_key_and_more.py  0009_flag_delete_selection.py  0010_photo_is_edited.py  0011_photo_replace_object_key_with_nextcloud_path.py  0012_unique_photo_per_gallery.py  0013_zipdownload.py
web/gallery/static/gallery/css/: style.css
web/templates/: 404.html  base.html  gallery.html
