[project]
name = "cosplay-photography-toolkit"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
web = [
    "django>=6.0.2",
    "django-environ>=0.13.0",
    "psycopg2-binary>=2.9.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]
